Fixed missing padding in style chooser (mobile version)

--- a/wcfsetup/install/files/style/layout/containerList.scss
+++ b/wcfsetup/install/files/style/layout/containerList.scss
@@ -271,3 +271,9 @@
         }
     }
 }
+
+@include screen-md-down {
+	.styleList > li {
+		padding: 10px;
+	}
+}
